<resources>
    <string name="app_name">Tp4</string>
    <string name="login">Login</string>
    <string name="usuarios">Usuarios</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingrese_su_mail">Ingrese su mail</string>
    <string name="nelsonvgarro_sanluis_edu_ar_12345678_example_gmail_com_12345678">nelsonvgarro@sanluis.edu.ar | 12345678 example@gmail.com | 12345678</string>
    <string name="title_activity_navegation">NavegationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mifoto">Mifoto</string>
    <string name="llamar">Llamar</string>
    <string name="ingrese_un_numero_de_telefono">Ingrese un numero de Telefono</string>
</resources>